# backseat

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  Makefile  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml
crates/backseat/: Cargo.toml  build.rs
crates/backseat-payload/: Cargo.toml
crates/backseat-payload/src/: lib.rs
crates/backseat-test-fixture/: Cargo.toml  build.rs
crates/backseat-test-fixture/src/: main.rs
crates/backseat/benches/: throughput.rs
crates/backseat/payload/: Cargo.toml
crates/backseat/payload/src/: lib.rs
crates/backseat/src/: error.rs  injector.rs  keyboard.rs  keys.rs  lib.rs  mouse.rs  session.rs
crates/backseat/tests/: integration.rs
crates/backseat/tests/integration/: main.rs
crates/backseat/tests/integration/helpers/: compositor.rs  mod.rs  target_app.rs
scripts/: pre-commit
src/: error.rs  injector.rs  keys.rs  mouse.rs  session.rs
src/fixture/: common.c  common.h  main.c
src/payload/: lib.rs  shim.c
tests/integration/: main.rs
tests/integration/helpers/: target_app.rs
