[package]
name = "backseat"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jashooa/backseat"
rust-version = "1.93"
description = "Wayland background input injection via ptrace"

[features]
fixture = ["dep:wayland-client", "dep:wayland-protocols"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros", "process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
nix = { version = "0.31", features = ["process", "ptrace"] }
pete = "0.13"
proc-maps = "0.4"
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
goblin = "0.10"
wayland-client = { version = "=0.31.14", default-features = false, features = ["system"], optional = true }
wayland-protocols = { version = "=0.32.12", features = ["client", "staging"], default-features = false, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "backseat-test-fixture"
path = "src/bin/fixture.rs"
required-features = ["fixture"]

[profile.release]
lto = true
panic = "abort"
