[package]
name = "backseat-payload"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Injected payload library for backseat"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
goblin = "0.10"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
