[package]
name = "backseat-test-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
wayland-client = { version = "=0.31.14", default-features = false, features = ["system"] }
wayland-protocols = { version = "=0.32.12", features = ["client", "staging"], default-features = false }
libc = "0.2"
