[package]
name = "backseat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wayland background input injection via ptrace"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros", "process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
nix = { version = "0.31", features = ["process", "ptrace"] }
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
goblin = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false
