# Vendored copy of backseat-payload — only used when backseat is installed from
# crates.io (i.e. outside the workspace).  During local development the
# workspace version in crates/backseat-payload/ is preferred.  Keep this in
# sync with crates/backseat-payload/Cargo.toml.
[workspace]

[package]
name = "backseat-payload"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jashooa/backseat"
description = "Injected payload library for backseat (vendored)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
goblin = "0.10"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
